--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,23 @@
 		<java.version>11</java.version>
 	</properties>
 	<dependencies>
+		
+		<!-- https://mvnrepository.com/artifact/javax.validation/validation-api -->
+			<dependency>
+	    <groupId>javax.validation</groupId>
+	    <artifactId>validation-api</artifactId>
+	    <version>2.0.1.Final</version>
+	</dependency>
+	
+		 <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-validation -->
 		<dependency>
+		    <groupId>org.springframework.boot</groupId>
+		    <artifactId>spring-boot-starter-validation</artifactId>
+		    <version>2.6.0</version>
+		</dependency>
+
+				
+		<dependency> 
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-thymeleaf</artifactId>
 		</dependency>
