--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,14 @@
 	</properties>
 	<dependencies>
 		
+		<!-- https://mvnrepository.com/artifact/org.modelmapper/modelmapper -->
+	<dependency>
+	    <groupId>org.modelmapper</groupId>
+	    <artifactId>modelmapper</artifactId>
+	    <version>3.1.1</version>
+	</dependency>
+
+		
 		<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-data-jdbc -->
 	<dependency>
 	    <groupId>org.springframework.boot</groupId>
