--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,2 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/ordersDB
-spring.datasource.username=root
-spring.datasource.password=root
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.data.mongodb.uri=mongodb+srv://vuklidavid:g03XLdicc4tOVw3m@cluster0.dx2cgqq.mongodb.net/cst339?retryWrites=true&w=majority
+spring.data.mongodb.database=cst339
