--- a/pom.xml
+++ b/pom.xml
@@ -9,14 +9,31 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.elvis</groupId>
-	<artifactId>topic5-1</artifactId>
+	<artifactId>Auth</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>topic5-1</name>
+	<name>Auth</name>
 	<description>Create some pages to demonstrate a controller and views</description>
 	<properties>
 		<java.version>11</java.version>
 	</properties>
 	<dependencies>
+		
+			<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-security -->
+	<dependency>
+	    <groupId>org.springframework.boot</groupId>
+	    <artifactId>spring-boot-starter-security</artifactId>
+	    <version>3.0.5</version>
+	</dependency>
+
+	
+	<!-- https://mvnrepository.com/artifact/org.thymeleaf.extras/thymeleaf-extras-springsecurity5 -->
+	<dependency>
+	    <groupId>org.thymeleaf.extras</groupId>
+	    <artifactId>thymeleaf-extras-springsecurity5</artifactId>
+	    <version>3.1.1.RELEASE</version>
+	</dependency>
+
+		
 		
 		<!-- https://mvnrepository.com/artifact/org.modelmapper/modelmapper -->
 	<dependency>
