--- a/pom.xml
+++ b/pom.xml
@@ -101,6 +101,7 @@
 	</dependencies>
 
 	<build>
+		<finalName>AuthDB3</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
